force-app/main/default/objects/Merchandise__c/Merchandise__c.object-meta.xml
<CustomObject>
    <label>Merchandise</label>
    <nameField>
        <label>Merchandise Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merchandises</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>