force-app/main/default/objects/Merchandise__c/fields/Merchandise_Description__c.field-meta.xml
<CustomField>
    <fullName>Merchandise_Description__c</fullName>
    <label>Merchandise Description</label>
    <type>TextArea</type>
</CustomField>