force-app/main/default/objects/Merchandise__c/fields/Merchandise_Unique_combination__c.field-meta.xml
<CustomField>
    <fullName>Merchandise_Unique_combination__c</fullName>
    <label>Merchandise Unique combination</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>