force-app/main/default/objects/Merchandise__c/fields/States__c.field-meta.xml
<CustomField>
    <fullName>States__c</fullName>
    <label>States</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UP</fullName>
            </value>
            <value>
                <fullName>MP</fullName>
            </value>
            <value>
                <fullName>NY</fullName>
            </value>
            <value>
                <fullName>NJ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>