force-app/main/default/objects/Merchandise__c/fields/Unique_field__c.field-meta.xml
<CustomField>
    <fullName>Unique_field__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Unique field</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>