force-app/main/default/objects/Merchandise__c/recordTypes/Merchandise_with_country.recordType-meta.xml
<RecordType>
    <fullName>Merchandise_with_country</fullName>
    <active>true</active>
    <label>Merchandise with country</label>
</RecordType>