force-app/main/default/objects/Merchandise__c/recordTypes/Merchandise_without_country.recordType-meta.xml
<RecordType>
    <fullName>Merchandise_without_country</fullName>
    <active>true</active>
    <label>Merchandise without country</label>
</RecordType>